export const snapshot = {};

snapshot[`Issue Create Command - Help Text 1`] = `
stdout:
"
Usage: create

Description:

  Create a linear issue

Options:

  -h, --help                                - Show this help.                                                
  --start                                   - Start the issue after creation                                 
  -a, --assignee             <assignee>     - Assign the issue to 'self' or someone (by username or name)    
  --due-date                 <dueDate>      - Due date of the issue                                          
  --parent                   <parent>       - Parent issue (if any) as a team_number code                    
  -p, --priority             <priority>     - Priority of the issue (1-4, descending priority)               
  --estimate                 <estimate>     - Points estimate of the issue                                   
  -d, --description          <description>  - Description of the issue                                       
  --description-file         <path>         - Read description from a file (preferred for markdown content)  
  -l, --label                <label>        - Issue label associated with the issue. May be repeated.        
  --team                     <team>         - Team associated with the issue (if not your default team)      
  --project                  <project>      - Name or slug ID of the project with the issue                  
  -s, --state                <state>        - Workflow state for the issue (by name or type)                 
  --milestone                <milestone>    - Name of the project milestone                                  
  --cycle                    <cycle>        - Cycle name, number, or 'active'                                
  -j, --json                                - Output as JSON                                                 
  --dry-run                                 - Preview the created issue without creating it                  
  --no-use-default-template                 - Do not use default template for the issue                      
  --no-interactive                          - Disable interactive prompts                                    
  -t, --title                <title>        - Title of the issue                                             

"
stderr:
""
`;

snapshot[`Issue Create Command - Happy Path 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-123/fix-authentication-bug
"
stderr:
""
`;

snapshot[`Issue Create Command - JSON Output 1`] = `
stdout:
'{
  "id": "issue-new-json",
  "identifier": "ENG-321",
  "title": "Bot-created issue",
  "url": "https://linear.app/test-team/issue/ENG-321/bot-created-issue",
  "dueDate": "2026-03-31",
  "assignee": {
    "id": "user-self-123",
    "name": "alice.bot",
    "displayName": "Alice Bot",
    "initials": "AB"
  },
  "parent": {
    "id": "parent-issue-id",
    "identifier": "ENG-220",
    "title": "Parent Issue",
    "url": "https://linear.app/test-team/issue/ENG-220/parent-issue",
    "dueDate": null,
    "state": {
      "name": "Backlog",
      "color": "#bec2c8"
    }
  },
  "state": {
    "name": "In Progress",
    "color": "#f87462"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Dry Run 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would create issue in ENG",
  "data": {
    "command": "issue.create",
    "start": false,
    "team": {
      "id": "team-eng-id",
      "key": "ENG"
    },
    "project": {
      "id": null,
      "nameOrSlug": null
    },
    "input": {
      "title": "Bot-created issue",
      "description": "Created from automation",
      "assigneeId": "user-self-123",
      "dueDate": "2026-03-31",
      "parent": {
        "id": "parent-issue-id",
        "identifier": "ENG-220",
        "title": "Parent Issue"
      },
      "priority": null,
      "estimate": null,
      "labelIds": [],
      "teamId": "team-eng-id",
      "projectId": null,
      "projectMilestoneId": null,
      "cycleId": null,
      "stateId": "state-started",
      "useDefaultTemplate": true
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Validation Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot use --json with --start",
    "suggestion": "Use --json for machine-readable output, or omit it when you want to start work immediately.",
    "context": "Failed to create issue"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - With Milestone 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-789/test-milestone-feature
"
stderr:
""
`;

snapshot[`Issue Create Command - Case Insensitive Label Matching 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-456/test-case-insensitive-labels
"
stderr:
""
`;

snapshot[`Issue Create Command - Short Flag -p Is Priority 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-999/test-priority-flag
"
stderr:
""
`;

snapshot[`Issue Create Command - With Cycle 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-890/test-cycle-feature
"
stderr:
""
`;
